--- a/forms/contactus.html
+++ b/forms/contactus.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="auth.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +24,7 @@
     <title>Contact Us</title>
 </head>
 
-<body>
+<body class="auth-page">
     <header>
 
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
@@ -56,49 +57,44 @@
         </div>
         <section class="discovery py-5">
             <div class="row align-items-center container  mx-auto">
-                <div class="img col-lg-6 col-md-6 col-12 w-50 ">
+                <div class="img col-lg-6 col-md-6 col-12 d-none d-md-block">
                     <img src="../images/contactus.jpg" alt="image" class="img-fluid">
 
                 </div>
 
-                <div class="text col-lg-6 col-md-6 col-12 w-50 ">
-
-                    <div class="container mt-4" id="form-container">
-
-                    <h2 class="text-center">Feel free to contact us using this form <i class="far fa-smile-beam"></i></h2>
-                        <form action="contactus.html" class="text-center">
-                            <div class="input-group mb-4">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-primary" id="inputGroup-sizing-default">Name</span>
-                                </div>
-                                <input type="text" name="name" placeholder="Name" class="form-control" id="name"
-                                    aria-describedby="emailHelp">
-                                
+                <div class="text col-lg-6 col-md-6 col-12">
+                    <div class="auth-card mt-4" id="form-container">
+                        <h2 class="mb-2">We'd love to hear from you</h2>
+                        <div class="auth-help">Fill the form and we'll get back within 1–2 business days.</div>
+                        <div id="formAlert" class="alert alert-success d-none" role="alert" aria-live="polite"></div>
+                        <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+                            <!-- Web3Forms required fields -->
+                            <input type="hidden" name="access_key" value="8e555a0f-c3c7-4f9c-9153-b2ccd642fe26">
+                            <input type="hidden" name="from_name" value="PinPoint Website">
+                            <input type="text" name="botcheck" class="d-none" tabindex="-1" autocomplete="off" aria-hidden="true">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" placeholder="Your name" class="form-control" id="name">
                             </div>
-                            <div class="input-group mb-4">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-primary" id="inputGroup-sizing-default">Email</span>
-                                </div>
-                                <input type="email" name="email" placeholder="john@gmail.com" class="form-control" id="email"
-                                    aria-describedby="emailHelp">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" placeholder="john@gmail.com" class="form-control" id="email">
                             </div>
-                            <div class="input-group mb-4">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-primary" id="inputGroup-sizing-default">Phone No.</span>
-                                </div>
-                                <input type="text" name="phone[1][number]" class="form-control" placeholder="+91 8888 8888" />
+                            <div class="form-group">
+                                <label for="phone">Phone No.</label>
+                                <input id="phone" type="text" name="phone[1][number]" class="form-control" placeholder="+91 8888 8888" />
                             </div>
-                            <div class="input-group mb-4">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-primary" id="inputGroup-sizing-default">Subject</span>
-                                </div>
-                                <textarea name="desc" class="form-control" id="desc" placeholder="Write Here..." cols="30" rows="2"></textarea>
+                            <div class="form-group">
+                                <label for="subject">Subject</label>
+                                <input id="subject" name="subject" type="text" class="form-control" placeholder="Subject">
                             </div>
-                            
-                            <button type="submit" class="btn btn-outline-primary">Submit</button>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea name="message" class="form-control" id="message" placeholder="Write your message..." rows="6"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block mt-2">Submit</button>
                         </form>
                     </div>
-
                 </div>
 
 
@@ -128,6 +124,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <script>
+      // Handle Web3Forms submit via AJAX to prevent redirect
+      (function(){
+        const form = document.getElementById('contactForm');
+        const alertBox = document.getElementById('formAlert');
+        if(!form) return;
+        form.addEventListener('submit', async function(e){
+          e.preventDefault();
+          alertBox.className = 'alert alert-info';
+          alertBox.textContent = 'Sending...';
+          alertBox.classList.remove('d-none');
+          try{
+            const formData = new FormData(form);
+            const res = await fetch(form.action, {
+              method: 'POST',
+              body: formData,
+              headers: { 'Accept': 'application/json' }
+            });
+            const data = await res.json();
+            if(res.ok){
+              alertBox.className = 'alert alert-success';
+              alertBox.textContent = 'Message sent successfully! We will reply soon.';
+              form.reset();
+            } else {
+              const msg = (data && data.message) ? data.message : 'Something went wrong. Please try again later.';
+              alertBox.className = 'alert alert-danger';
+              alertBox.textContent = msg;
+            }
+          }catch(err){
+            alertBox.className = 'alert alert-danger';
+            alertBox.textContent = 'Network error. Please check your connection and try again.';
+          }
+        });
+      })();
+    </script>
 
 </body>
 
