--- a/forms/register.html
+++ b/forms/register.html
@@ -55,10 +55,10 @@
     <main>
         <section class="auth-wrapper">
             <div class="auth-hero">
-                <span class="auth-badge"><i class="fas fa-lock"></i> Secure OTP Login</span>
+                <span class="auth-badge"><i class="fas fa-lock"></i> Secure Password Login</span>
                 <h1 class="auth-title">Sign in or Create your PinPoint account</h1>
                 <p class="auth-sub">
-                    One-time password sent to your college email. No passwords to remember — fast and secure access to Lost & Found.
+                    Use your college email and a password. Passwords are stored securely using strong hashing.
                 </p>
             </div>
 
@@ -67,28 +67,31 @@
                 <div id="authLoading" class="auth-loading" style="display:none;" aria-live="polite" aria-busy="true">
                     <div class="auth-loading-box">
                         <div class="spinner" role="status" aria-label="Loading"></div>
-                        <div id="authLoadingMsg" class="auth-loading-text">Sending OTP...</div>
+                        <div id="authLoadingMsg" class="auth-loading-text">Signing in...</div>
                     </div>
                 </div>
                 <h2 class="mb-2">Welcome back</h2>
-                <div class="auth-help">Enter your college email to receive a sign-in code.</div>
+                <div class="auth-help">Enter your college email and password to sign in or register.</div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input id="email" type="email" class="form-control" placeholder="your@chitkara.edu.in" />
                     <div id="emailDomainNote" class="form-note error" style="display:none;">Only Chitkara University email is allowed.</div>
                 </div>
-                <button id="requestBtn" type="button" class="btn btn-primary btn-block mt-2">Request OTP</button>
-                <div class="divider my-3"><span>or</span></div>
-                <div id="otpSection" style="display:none;">
-                    <div class="form-group">
-                        <label for="otp">Enter OTP</label>
-                        <input id="otp" type="text" class="form-control" placeholder="6-digit code" />
-                    </div>
-                    <button id="verifyBtn" type="button" class="btn btn-success btn-block">Verify & Continue</button>
+                <button id="continueBtn" type="button" class="btn btn-primary btn-block mt-2">Continue</button>
+                <div id="passwordRow" style="display:none;">
+                  <div class="form-group mt-3">
+                      <label for="password">Password</label>
+                      <input id="password" type="password" class="form-control" placeholder="Your password" />
+                  </div>
+                  <div class="d-flex mt-2">
+                      <button id="loginBtn" type="button" class="btn btn-primary btn-block mr-2" style="display:none;">Login</button>
+                      <button id="registerBtn" type="button" class="btn btn-success btn-block" style="display:none;">Set Password & Register</button>
+                  </div>
                 </div>
                 <div class="mt-3 text-muted" style="font-size:12px;">
                     By continuing you agree to our <a href="#">Terms</a> and <a href="#">Privacy Policy</a>.
                 </div>
+
             </div>
 
         </section>
@@ -116,13 +119,14 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script type="module">
-      import { handleLoginForm } from '../assets/js/auth.js';
-      const email = document.getElementById('email');
-      const requestBtn = document.getElementById('requestBtn');
-      const otpSection = document.getElementById('otpSection');
-      const otp = document.getElementById('otp');
-      const verifyBtn = document.getElementById('verifyBtn');
-      handleLoginForm(email, requestBtn, otpSection, otp, verifyBtn);
+      import { handleEmailFirstAuth } from '../assets/js/auth.js';
+      const emailInput = document.getElementById('email');
+      const continueBtn = document.getElementById('continueBtn');
+      const passwordRow = document.getElementById('passwordRow');
+      const passwordInput = document.getElementById('password');
+      const loginBtn = document.getElementById('loginBtn');
+      const registerBtn = document.getElementById('registerBtn');
+      handleEmailFirstAuth({ emailInput, continueBtn, passwordRow, passwordInput, loginBtn, registerBtn });
     </script>
 </body>
 
